# e

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  agent-sync.md  agents.md  configuration.md  database.md  debugging.md  editing.md  find-and-replace.md  getting-started.md  inertia.md  installation.md  keybindings.md  keyboard-shortcuts.md  languages-and-lsp.md  laravel.md  navigation.md  prd-database.md  source-control.md  tasks.md  terminal.md  troubleshooting.md  updating.md
e-agent/: Cargo.toml
e-agent/src/: chat.rs  client.rs  lib.rs  protocol.rs
e-agent/tests/: integration.rs  replay.rs
e-agent/tests/fixtures/: list_files.jsonl
e-app/: Cargo.toml
e-app/src/: about.rs  agent_links.rs  agent_native.rs  agent_sync.rs  agent_ui.rs  agent_view.rs  app.rs  breadcrumbs.rs  builtin_completion.rs  cmd_palette.rs  code_action.rs  codegen.rs  commands.rs  completion.rs  completion_state.rs  config.rs  contract.rs  contract_view.rs  corpus.rs  db_console.rs  db_export.rs  db_import.rs  db_state.rs  db_view.rs  debug.rs  debug_view.rs  dialogs.rs  diff_view.rs  editing.rs  editor_area.rs  eloquent.rs  emmet.rs  events.rs  events_view.rs  file_ops.rs  file_tree.rs  find.rs  framework_completion.rs  ghost.rs  git_view.rs  (+50 more)
e-core/: Cargo.toml
e-core/src/: buffer.rs  diff.rs  editorconfig.rs  git.rs  language.rs  lib.rs  markdown.rs  syntax.rs  undotree.rs
e-dap/: Cargo.toml
e-dap/src/: lib.rs
e-dap/tests/: integration.rs
e-db/: Cargo.toml
e-db/src/: history.rs  lib.rs
e-lsp/: Cargo.toml
e-lsp/src/: lib.rs
e-lsp/tests/: integration.rs
e-term/: Cargo.toml
e-term/src/: lib.rs
e-verify/: Cargo.toml
e-verify/src/: lib.rs
e-verify/tests/: golden.rs
e-verify/tests/fixtures/: after.json  before.json
icons/: .gitignore  e.icns
scripts/: bundle-dmg.sh  bundle-macos.sh  release.sh  run.sh  sign.sh
