[package]
name        = "e"
version     = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
default-run  = "e"

[dependencies]
e-app = { path = "./e-app" }

[[bin]]
name = "e"
path = "e-app/src/bin/e.rs"

[workspace]
members  = ["e-app", "e-core"]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.87.0"
license      = "Apache-2.0"
authors      = ["kh"]

[workspace.dependencies]
anyhow      = "1.0"
e-core      = { path = "./e-core" }

# Same Floem revision Lapce builds against, so we can use it as a reference.
[workspace.dependencies.floem]
git      = "https://github.com/lapce/floem"
rev      = "31fa8f444c37f4c314f47d88c23ffdbc25f2ab53"
features = ["editor", "serde", "default-image-formats", "rfd-async-std"]

[workspace.dependencies.floem-editor-core]
git      = "https://github.com/lapce/floem"
rev      = "31fa8f444c37f4c314f47d88c23ffdbc25f2ab53"
features = ["serde"]

[patch.crates-io]
lsp-types = { git = "https://github.com/lapce/lsp-types", rev = "feaa1e2ec80975c9dadd400a238ceacf071058e6" }
regalloc2 = { rev = "5d79e12d0a93b10fc181f4da409b4671dd365228", git = "https://github.com/bytecodealliance/regalloc2" }
dpi       = { git = "https://github.com/rust-windowing/winit", rev = "ee245c569d65fdeacf705ee5eedb564508d10ebe" }
