[package]
name        = "e"
version     = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
default-run  = "e"

[dependencies]
e-app = { path = "./e-app" }

[[bin]]
name = "e"
path = "e-app/src/bin/e.rs"

[workspace]
members  = ["e-app", "e-core", "e-db", "e-lsp", "e-term"]
resolver = "2"

[workspace.package]
version      = "0.6.3"
edition      = "2021"
rust-version = "1.87.0"
license      = "MIT"
authors      = ["Knut W. Horne <kh@gets.no>"]
description  = "The editor for the rest of us — a fast, native code editor written in Rust."
repository    = "https://github.com/kwhorne/e"
homepage      = "https://elyracode.com/e"
documentation = "https://elyracode.com/docs/e"
readme        = "README.md"
keywords     = ["editor", "ide", "rust", "lsp", "php"]
categories   = ["development-tools", "text-editors"]

[workspace.dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
lsp-types   = "0.95.1"
crossbeam-channel = "0.5"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
regex       = "1"
e-core      = { path = "./e-core" }
e-db        = { path = "./e-db" }
e-lsp       = { path = "./e-lsp" }
e-term      = { path = "./e-term" }

# Same Floem revision Lapce builds against, so we can use it as a reference.
[workspace.dependencies.floem]
git      = "https://github.com/lapce/floem"
rev      = "31fa8f444c37f4c314f47d88c23ffdbc25f2ab53"
features = ["editor", "serde", "default-image-formats", "rfd-async-std"]

[workspace.dependencies.floem-editor-core]
git      = "https://github.com/lapce/floem"
rev      = "31fa8f444c37f4c314f47d88c23ffdbc25f2ab53"
features = ["serde"]

[patch.crates-io]
lsp-types = { git = "https://github.com/lapce/lsp-types", rev = "feaa1e2ec80975c9dadd400a238ceacf071058e6" }
dpi       = { git = "https://github.com/rust-windowing/winit", rev = "ee245c569d65fdeacf705ee5eedb564508d10ebe" }
