[package]
name        = "e"
version     = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
default-run  = "e"

[dependencies]
e-app = { path = "./e-app" }

[[bin]]
name = "e"
path = "e-app/src/bin/e.rs"

[workspace]
members  = ["e-app", "e-core", "e-db", "e-dap", "e-lsp", "e-term", "e-agent", "e-verify"]
# The vendored Floem fork (vendor/floem) is its own workspace; keep it out of
# ours so the two don't collide. We depend on it via path below.
exclude  = ["vendor/floem"]
resolver = "2"

[workspace.package]
version      = "0.9.5"
edition      = "2021"
rust-version = "1.87.0"
license      = "MIT"
authors      = ["Knut W. Horne <kh@gets.no>"]
description  = "The editor for the rest of us — a fast, native code editor written in Rust."
repository    = "https://github.com/kwhorne/e"
homepage      = "https://elyracode.com/e"
documentation = "https://elyracode.com/docs/e"
readme        = "README.md"
keywords     = ["editor", "ide", "rust", "lsp", "php"]
categories   = ["development-tools", "text-editors"]

[workspace.dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
lsp-types   = "0.95.1"
crossbeam-channel = "0.5"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
regex       = "1"
e-agent     = { path = "./e-agent" }
e-verify    = { path = "./e-verify" }
e-core      = { path = "./e-core" }
e-db        = { path = "./e-db" }
e-dap       = { path = "./e-dap" }
e-lsp       = { path = "./e-lsp" }
e-term      = { path = "./e-term" }

# Vendored Floem fork (vendor/floem), forked from lapce/floem @ 31fa8f44. We own
# this copy so we can extend the editor/text/input views instead of being
# limited by upstream. See vendor/floem/FORK.md.
[workspace.dependencies.floem]
path     = "vendor/floem"
features = ["editor", "serde", "default-image-formats", "rfd-async-std"]

[workspace.dependencies.floem-editor-core]
path     = "vendor/floem/editor-core"
features = ["serde"]

[patch.crates-io]
lsp-types = { git = "https://github.com/lapce/lsp-types", rev = "feaa1e2ec80975c9dadd400a238ceacf071058e6" }
dpi       = { git = "https://github.com/rust-windowing/winit", rev = "ee245c569d65fdeacf705ee5eedb564508d10ebe" }
