[package]
name         = "e-agent"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
serde_json        = { workspace = true }
crossbeam-channel = { workspace = true }
