[package]
name         = "e-core"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow                  = { workspace = true }
once_cell               = "1.19"
tree-sitter             = "0.24"
tree-sitter-highlight   = "0.24"
tree-sitter-rust        = "0.23"
tree-sitter-python      = "0.23"
tree-sitter-javascript  = "0.23"
tree-sitter-json        = "0.24"
tree-sitter-go          = "0.23"
tree-sitter-c           = "0.23"
