[package]
name         = "e-core"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow                   = { workspace = true }
once_cell                = "1.19"
encoding_rs              = "0.8"
similar                  = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
pulldown-cmark           = { version = "0.13", default-features = false }
tree-sitter              = "0.25"
tree-sitter-highlight    = "0.25"
tree-sitter-rust         = "0.23"
tree-sitter-python       = "0.23"
tree-sitter-javascript   = "0.23"
tree-sitter-typescript   = "0.23"
tree-sitter-json         = "0.24"
tree-sitter-go           = "0.23"
tree-sitter-c            = "0.23"
tree-sitter-php          = "0.24"
tree-sitter-sequel       = "0.3"   # SQL grammar, for SQL-in-PHP injection highlighting
tree-sitter-html         = "0.23"
tree-sitter-css          = "0.25"
tree-sitter-svelte-ng    = "1.0"
