[package]
name         = "e-dap"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
crossbeam-channel = { workspace = true }
