[package]
name         = "e-db"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
mysql      = "25"
postgres   = "0.19"
rusqlite   = { version = "0.32", features = ["bundled"] }
