[package]
name         = "e-lsp"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
lsp-types         = { workspace = true }
crossbeam-channel = { workspace = true }
